# trending-agent

./: .gitignore  Dockerfile  LICENSE  README.md  docker-build.sh  project_structure.txt
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: graph.py  main.py  tools.py
backend/app/utils/: setup.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx  reset.css
frontend/src/components/: App.jsx  Content.jsx  Controls.jsx  Header.jsx
