[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trending-agent-backend"
version = "0.1.0"
description = "Backend server for trending information retrieval"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.23.2",
    "langgraph==0.1.7",
    "openai==1.7.2",
    "langchain==0.0.311",
    "pydantic==2.4.2",
    "httpx==0.25.0",
    "python-dotenv==1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
] 