[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trending-agent-backend"
version = "0.1.0"
description = "Backend server for trending information retrieval"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "openai",
    "langchain",
    "pydantic",
    "httpx",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
] 