[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trending-agent-backend"
version = "0.1.0"
description = "Backend server for trending information retrieval"
requires-python = ">=3.9"
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "certifi==2025.1.31",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "distro==1.9.0",
  "fastapi==0.115.12",
  "h11==0.14.0",
  "httpcore==1.0.8",
  "httpx==0.28.1",
  "idna==3.10",
  "jiter==0.9.0",
  "jsonpatch==1.33",
  "jsonpointer==3.0.0",
  "langchain==0.3.23",
  "langchain-core==0.3.54",
  "langchain-openai==0.3.14",
  "langchain-text-splitters==0.3.8",
  "langgraph==0.3.31",
  "langgraph-checkpoint==2.0.24",
  "langgraph-prebuilt==0.1.8",
  "langgraph-sdk==0.1.61",
  "langsmith==0.3.32",
  "openai==1.75.0",
  "orjson==3.10.16",
  "ormsgpack==1.9.1",
  "packaging==24.2",
  "pydantic==2.11.3",
  "pydantic-core==2.33.1",
  "python-dotenv==1.1.0",
  "pyyaml==6.0.2",
  "regex==2024.11.6",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "sniffio==1.3.1",
  "sqlalchemy==2.0.40",
  "starlette==0.46.2",
  "tenacity==9.1.2",
  "tiktoken==0.9.0",
  "tqdm==4.67.1",
  "typing-extensions==4.13.2",
  "typing-inspection==0.4.0",
  "urllib3==2.4.0",
  "uvicorn==0.34.1",
  "xxhash==3.5.0",
  "zstandard==0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
] 